#77 Fixes alignment of formatting tip.

--- a/www/c/pstyle.css
+++ b/www/c/pstyle.css
@@ -129,3 +129,9 @@ table.post_chart th {
 #tabscc .ui-tabs-nav li.ui-tabs-selected {
 	padding-bottom: 0;
 }
+
+.postEditHS .tip, .postEditCC .tip {
+	margin-bottom: 5px; 
+	margin-right: 30px; 
+	font-style: italic;
+}
